--- a/ms-clientes/src/main/resources/application.properties
+++ b/ms-clientes/src/main/resources/application.properties
@@ -25,6 +25,10 @@ management.metrics.web.server.request.autotime.enabled=true
 management.endpoint.prometheus.enabled=true
 management.prometheus.metrics.export.enabled=true
 
+cliente.maximoDescubierto.default=1000.00
+
+
+
 # spring.zipkin.baseUrl: http://zipkin:9411/
 # logging.level.root=debug
 # management.tracing.sampling.probability=1.0
