--- a/ms-clientes/pom.xml
+++ b/ms-clientes/pom.xml
@@ -38,6 +38,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+    		<groupId>com.pulumi</groupId>
+    		<artifactId>mailgun</artifactId>
+    		<version>3.6.0-alpha.1718430309</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
@@ -94,6 +99,11 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+        	<groupId>io.springfox</groupId>
+        	<artifactId>springfox-boot-starter</artifactId>
+        	<version>3.0.0</version>
+    	</dependency>
 		<!-- <dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-tracing-bridge-otel</artifactId>
@@ -134,6 +144,7 @@
 			<artifactId>logback-gelf</artifactId>
 			<version>6.0.1</version>
 		</dependency>
+		
 	</dependencies>
 
 	<dependencyManagement>
